# CurrencyApp

./: README.md  agent1q27kf59jz2_data.json  private_keys.json  pyproject.toml
hackaiprojectattempt/src/: CurrencyValues.txt  agents.py  apiCall.py  interface.py  main.py  messageClasses.py  trialDictRead.py
