[tool.poetry]
name = "hackaiprojectattempt"
version = "0.1.0"
description = ""
authors = ["GodKing4Ever <samanthmartis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
customtkinter = "^5.2.1"

uagents={ version ="^0.9.2", python = "<3.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
